--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "test": "test"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "jquery": "^3.3.1",
-    "mongoose": "^5.2.12",
+    "fs": "0.0.1-security",
+    "request": "^2.88.0",
     "supertest": "^3.1.0"
   },
   "devDependencies": {
